java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018c.pass
package org.netbeans.test.java.hints;

import Map.Entry;
import Map.*;
import static java.util.Collections.sort;
import static Collections.*;

public class ImportInImport {
    
}
